# qlnn

./: .gitignore  ACCESS_APPLICATION.md  ADVISOR_BRIEF.md  AGENTS.md  ARXIV_SUBMISSION.md  CLAUDE.md  COVER_LETTER.md  FOLLOW_UP_PAPERS.md  HANDOFF.md  NEXT_AGENT_PICKUP.md  NEXT_STEPS.md  ODE_PDE_PRE_REG.md  P6_LAUNCH_PLAN.md  PAPER_SUMMARY.md  PEER_REVIEW_SYNTHESIS.md  PRE_REG_AMENDMENT.md  PROJECT_DOSSIER.md  README.md  REMEDIATION_PLAN.md  REVIEW_SYNTHESIS.md  REVIEW_step23_quantum.md  REVIEW_step56.md  STEP5_MONOTONICITY_NOTE.md  hypothesis.md  pyproject.toml  requirements-dev.txt  requirements.txt
.planning/: .continue-here.md  HANDOFF.json  P3_9_DESIGN.md  UNIFIED_MATRIX_DESIGN.md
archive/: OPTION_B_SEARCH_DESIGN.md  PAPER_SUMMARY.md  PROJECT_DOSSIER.md  README.md  REVIEW_integration.md  REVIEW_methodology.md  REVIEW_step1_classical.md  STEP6_PLAN.md  hypothesis.md  spec.md
configs/: baseline.yaml  baseline_euler_fast.yaml  baseline_euler_fixed_od.yaml  baseline_physics.yaml  qlnn_hybrid.yaml  qlnn_hybrid_physics.yaml
paper/: .gitignore  build.sh  build_supplement.sh  liquid_nn_review.md  main.tex  references.bib  supplement.tex
presentation/: advisor_update_2026-07.pptx  make_lnn_diagrams.py
refs/: CIRCUIT_SPECS.md  _check_foundational.md  _check_qcpinn.md  _check_rf_qrc.md  _check_te_qpinn.md  _speccard_foundational.md  _speccard_qcpinn.md  _speccard_rf_qrc.md  _speccard_te_qpinn.md  _speccard_te_qpinn_qnn.md  liquid_nn_refs.bib  liquid_nn_review.md
results/: master_comparison.csv
scripts/: analyze_quantum_trainability.py  build_dataset_baseline_locks.py  check_circuit_regression.py  compare_scaling.py  generate_circuit_search_configs.py  generate_option_b_configs.py  generate_pde_data.py  generate_synthetic_ode_configs.py  generate_synthetic_ode_data.py  make_paper_figures.py  (+70 more)
(+2229 files in other folders)
