[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-liquid-neural-network"
version = "0.1.0"
description = "Quantum-liquid neural ODE components for time-series generation (research code)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.24",
  # Classical baseline stack (PyTorch).
  "torch>=2.0",
  "torchdiffeq>=0.2.3",
  # Quantum / JAX stack (qlnn_ subpackage).
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "equinox>=0.11",
  "diffrax>=0.6",
  "optax>=0.2",
  "pennylane>=0.32",
  # Shared utilities.
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
